# json-inspector

./: .gitignore  README.md  pyproject.toml
.github/workflows/: dev_builds.yaml  test_dev_builds.yaml
src/schematizer/: __about__.py  codecs.py
src/schematizer/json_records/: codecs.py  iterators.py
src/schematizer/scripts/: main.py
tests/: conftest.py  test_codecs.py  test_utils.py
tests/json_records/: test_codecs.py  test_iterators.py
