[project]
name = "json-schematizer"
dynamic = ["version"]
description = "JSON schema tools"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["json", "schema"]
authors = [
  { name = "André Fernandes", email = "665811+asfer@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "orjson",
  "docopt",
]

[project.scripts]
schematizer = "schematizer.scripts.main:main"

[project.urls]
Documentation = "https://github.com/asfer/json-schematizer#readme"
Issues = "https://github.com/asfer/json-schematizer/issues"
Source = "https://github.com/asfer/json-schematizer"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/schematizer/__about__.py"

[tool.hatch.build.targets.dist]
packages = ["src/schematizer"]

[tool.hatch.build.targets.wheel]
packages = ["src/schematizer"]


[tool.hatch.envs.tests]
dependencies = [
  "pytest",
  "pytest-cov",
  "pytest-mock",
]

[tool.hatch.envs.tests.scripts]
run-cov = "pytest --cov-config=pyproject.toml --cov=schematizer"
run = "run-cov --no-cov"

[[tool.hatch.envs.tests.matrix]]
python = ["3.12", "3.11", "3.10"]


[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
pythonpath = ["src"]


[tool.coverage.run]
branch = true
parallel = true
omit = [
  "src/schematizer/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]


[tool.hatch.envs.types]
dependencies = [
  "mypy",
  "pytest"
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/schematizer tests}"


[tool.hatch.envs.lint]
dependencies = [
  "ruff",
]

[tool.hatch.envs.lint.scripts]
check = "ruff check src tests && ruff format --diff"

[tool.ruff]
indent-width = 4
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["E501"]  # ignores line length errors

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"
